<resources>
    <string name="app_name">SoniBook</string>
    <string name="registro_btn">"Registrarse"</string>
    <string name="ingresar_btn">"Ingresar"</string>
    <string name="crear_cuenta_btn">"Crear Cuenta"</string>">
    <string name="crear_libro_btn">"Crear Libro"</string>">
    <string name="atras_btn">"Atrás"</string>
    <string name="iniciar_sesion_btn">"Iniciar Sesión"</string>
    <string name="menu_salir">"Cerrar Sesión"</string>
    <string name="ajustes_user">"Ajustes"</string>
    <string name="srch">Buscar\n</string>
    <string name="add_capitulo_btn">"Importar Capítulo"</string>">
    <string name="ver_capitulos_btn">"Ver Capítulos"</string>">
    <string name="crear_capitulo_btn">"Crear Capítulo"</string>">
    <string name="ver_libros_btn">"Ver Libros"</string>">
    <string name="anadir_capitulo_btn">"Añadir capítulo"</string>
    <string name="subir_audio_btn">"Subir audio"</string>
</resources>