<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity"

    >
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/srch"
        app:actionViewClass="com.google.android.material.search.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/ajustes_user"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/ajustes_user" />
    <item
        android:id="@+id/menu_salir"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/menu_salir" />


</menu>
