<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="285dp"
            android:layout_height="239dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:padding="30dp"
            android:src="@mipmap/ic_chat_round" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/racing_sans_one"
            android:text="@string/app_name"
            android:textColor="#673AB7"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />
        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/ingresar_btn"
            android:text="@string/ingresar_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/registro_btn"
            android:text="@string/registro_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        
    </LinearLayout>

</RelativeLayout>